traversal.zigzag.traversalzigzag.TraversalZigZag.scala.error
Erreur de compilation :
TraversalZigZag:2: error: ':' expected but ')' found.
def avancerCrois(a):Boolean={
                  ^TraversalZigZag:45: error: identifier expected but '}' found.
}
^