traversal.zigzag.traversalzigzag.TraversalZigZag.scala.code
def estPosiFin():Boolean={
  if(getX()+1==getMondeHauteur() && getY()+1==getMondeLargeur()){return true}}
def avancerCrois(a):Boolean={
  var x=getX()
  var y=getY()
	x=x+1
  if(a){if (x+1>getMondeLargeur()){y=y+1;setPos(x,y);return false}
  setPos(x,y)
        return true}
  if x==0{y=y+1;setPos(x,y);return true}
  setPos(x,y)
  return false}




override def run() {
  var mark=0
	var a= true 
  do{ecritMessage(mark)
     mark=mark+1
     a=avancer(a)}while(!estPosiFin())
  ecritMessage(mark)
}





